modified home page text

--- a/app/home/views/home.html
+++ b/app/home/views/home.html
@@ -4,7 +4,8 @@
 			<h3 class='panel-title'>How It Works</h3>
 		</div>
 		<div class='intro-content'>
-			LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM
+			This demo project interacts with the Geonames REST API. Browse countries and then see the country details.
+			An image of the country, their flag, capital and population information is provided through the API.
 		</div>
 		<div class='actions'>				
 				<a ng-href= "#/countries" class='btn btn-blue' value='Browse Countries'>Browse Countries</a>
